--- a/Project3_LukeRhinehart.ipynb
+++ b/Project3_LukeRhinehart.ipynb
@@ -41,9 +41,10 @@
     "#Attempts to generate a hyperplane which seperates values with it. This is similar to a knn graph or cluster.\n",
     "#This is able to be used for classification, regression and identifying outliers\n",
     "#The hyperplanes are drawn an equal margin between values of one feature to another\n",
-    "#This margin generally has an amount of flexibility which can be changed.\n",
-    "#hard margins attempt to get as close as possible and soft margins can stray farther from it\n",
-    "#after the hyperplanes are drawn it attempts to find which separate the values the most properly\n",
+    "#This written to 3 vectors equal to \n",
+    "# w*x - b = 0 for the middle line and\n",
+    "# w*x - b = 1 and w*x - b = -1 for lines crossing through the feature points\n",
+    "#w is the vector to the hyperplane, b is the offset from the origin ( think if there was a parellel line through the origin)\n",
     "\n",
     "#In Sklearn, SVC using the linear kernel and linearSVC generate straight hyperplanes\n",
     "#curved hyperplanes can be generate as well with RBF and polynomial kernel using SVS\n",
@@ -293,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a427ba2c",
+   "id": "e285e0e4",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4c2beb76",
+   "id": "3773433c",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "32b7fa2e",
+   "id": "ac6dadf2",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "432cdd21",
+   "id": "558cd625",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e6fdb147",
+   "id": "cf71fffe",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b67cb7e4",
+   "id": "1948dd18",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7de6b492",
+   "id": "3cd25748",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cc42405b",
+   "id": "17b19a3f",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +652,7 @@
     "print(catFeatures.scores_)\n",
     "print(catFeatures.pvalues_)\n",
     "\n",
-    "#The p values for Subplot, Light_Cat, Soil, Sterile\n",
+    "#The p values for Subplot, Light_Cat, Core, Sterile\n",
     "\n",
     "df_drop_chi = df_replace.drop(columns=['Subplot', 'Light_Cat', 'Core', 'Sterile'])"
    ]
@@ -762,14 +763,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "97a94124",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 57,
    "id": "24155b7f",
    "metadata": {},
@@ -809,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c8889a0d",
+   "id": "b2202dfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b4f62fcb",
+   "id": "86d0b1b1",
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1111,7 @@
     "y_predicted = classifier.predict(X_test)\n",
     "accuracy_score(y_test, y_predicted)\n",
     "\n",
-    "#Accuracy of the knn result is ~2% less than that of Linear SVM and "
+    "#Accuracy of the knn result is ~2% less than that of Linear SVM and ~6% less than rbf SVM"
    ]
   },
   {
